Do not check duplicate key violations on index builds during oplog application phase of initial sync

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.0-rc0, 4.7.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v4.4
    • Execution Team 2020-04-06
    • 27
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A node is not consistent until initial sync is complete, which includes the oplog application phase.

      This fatal assertion can fail during initial sync when inconsistencies are observed.

            Assignee:
            Louis Williams
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: