SERVER-46895 Do not check duplicate key violations on index builds during oplog application phase of initial sync

(cherry picked from commit 45db64dd0947fa13373a0ed03ce7c3da9d97f12b)