src/mongo/db/catalog/multi_index_block.cpp
@@ -751,8 +751,6 @@ Status MultiIndexBlock::retrySkippedRecords(OperationContext* opCtx, Collection*
 }
 
 Status MultiIndexBlock::checkConstraints(OperationContext* opCtx) {
-    _constraintsChecked = true;
-
     if (State::kAborted == _getState()) {
         return {ErrorCodes::IndexBuildAborted,
                 str::stream() << "Index build aborted: " << _abortReason
@@ -819,9 +817,6 @@ Status MultiIndexBlock::commit(OperationContext* opCtx,
                           << ". Cannot commit index builder: " << collection->ns()
                           << (_collectionUUID ? (" (" + _collectionUUID->toString() + ")") : "")};
     }
-
-    // Ensure that duplicate key constraints were checked at least once.
-    invariant(_constraintsChecked);
 
     // Do not interfere with writing multikey information when committing index builds.
     auto restartTracker = makeGuard(
